@@ -886,6 +886,7 @@ function ReplicationLoggerSuite () {
       entry = getLogEntries(tick, 2300)[0];
       assertEqual(2300, entry.type);
       assertEqual(c._id, entry.cid);
+      assertEqual(c.name(), entry.cname);
       assertEqual("12345", entry.data._key);
       assertEqual(rev, entry.data._rev);
       assertEqual(2, entry.data.test);
@@ -935,6 +936,7 @@ function ReplicationLoggerSuite () {
       var entry = getLogEntries(tick, 2302)[0];
       assertEqual(2302, entry.type);
       assertEqual(c._id, entry.cid);
+      assertEqual(c.name(), entry.cname);
       assertEqual("abc", entry.data._key);
 
       tick = getLastLogTick();
@@ -973,11 +975,13 @@ function ReplicationLoggerSuite () {
 
       assertEqual(2300, entry[0].type);
       assertEqual(c._id, entry[0].cid);
+      assertEqual(c.name(), entry[0].cname);
       assertEqual("abc", entry[0].data._key);
       assertEqual(2, entry[0].data.test);
 
       assertEqual(2300, entry[1].type);
       assertEqual(c._id, entry[1].cid);
+      assertEqual(c.name(), entry[1].cname);
       assertEqual("12345", entry[1].data._key);
       assertEqual(1, entry[1].data.test);
 
@@ -988,6 +992,7 @@ function ReplicationLoggerSuite () {
 
       assertEqual(2300, entry.type);
       assertEqual(c._id, entry.cid);
+      assertEqual(c.name(), entry.cname);
       assertEqual("abc", entry.data._key);
       assertEqual(3, entry.data.test);
 
@@ -1026,11 +1031,13 @@ function ReplicationLoggerSuite () {
       var entry = getLogEntries(tick, 2300);
       assertEqual(2300, entry[0].type);
       assertEqual(c._id, entry[0].cid);
+      assertEqual(c.name(), entry[0].cname);
       assertEqual("abc", entry[0].data._key);
       assertEqual(2, entry[0].data.test);
 
       assertEqual(2300, entry[1].type);
       assertEqual(c._id, entry[1].cid);
+      assertEqual(c.name(), entry[1].cname);
       assertEqual("12345", entry[1].data._key);
       assertEqual(1, entry[1].data.test);
 
@@ -1071,6 +1078,7 @@ function ReplicationLoggerSuite () {
       var entry = getLogEntries(tick, 2300)[0];
       assertEqual(2300, entry.type);
       assertEqual(e._id, entry.cid);
+      assertEqual(e.name(), entry.cname);
       assertEqual("abc", entry.data._key);
       assertEqual(c.name() + "/test1", entry.data._from);
       assertEqual(c.name() + "/test2", entry.data._to);
@@ -1082,6 +1090,7 @@ function ReplicationLoggerSuite () {
 
       assertEqual(2300, entry.type);
       assertEqual(e._id, entry.cid);
+      assertEqual(e.name(), entry.cname);
       assertEqual("12345", entry.data._key);
       assertEqual(c.name() + "/test3", entry.data._from);
       assertEqual(c.name() + "/test4", entry.data._to);
@@ -1118,6 +1127,7 @@ function ReplicationLoggerSuite () {
       var entry = getLogEntries(tick, 2302)[0];
       assertEqual(2302, entry.type);
       assertEqual(e._id, entry.cid);
+      assertEqual(e.name(), entry.cname);
       assertEqual("abc", entry.data._key);
 
       e.remove("12345");
@@ -1150,6 +1160,7 @@ function ReplicationLoggerSuite () {
       var entry = getLogEntries(tick, 2300);
       assertEqual(2300, entry[0].type);
       assertEqual(e._id, entry[0].cid);
+      assertEqual(e.name(), entry[0].cname);
       assertEqual("abc", entry[0].data._key);
       assertEqual(2, entry[0].data.test);
       assertEqual(c.name() + "/test1", entry[0].data._from);
@@ -1157,6 +1168,7 @@ function ReplicationLoggerSuite () {
 
       assertEqual(2300, entry[1].type);
       assertEqual(e._id, entry[1].cid);
+      assertEqual(e.name(), entry[1].cname);
       assertEqual("12345", entry[1].data._key);
       assertEqual(1, entry[1].data.test);
       assertEqual(c.name() + "/test3", entry[1].data._from);
@@ -1200,6 +1212,7 @@ function ReplicationLoggerSuite () {
       var entry = getLogEntries(tick, 2300);
       assertEqual(2300, entry[0].type);
       assertEqual(e._id, entry[0].cid);
+      assertEqual(e.name(), entry[0].cname);
       assertEqual("abc", entry[0].data._key);
       assertEqual(2, entry[0].data.test);
       assertEqual(c.name() + "/test1", entry[0].data._from);
@@ -1207,6 +1220,7 @@ function ReplicationLoggerSuite () {
 
       assertEqual(2300, entry[1].type);
       assertEqual(e._id, entry[1].cid);
+      assertEqual(e.name(), entry[1].cname);
       assertEqual("12345", entry[1].data._key);
       assertEqual(1, entry[1].data.test);
       assertEqual(c.name() + "/test3", entry[1].data._from);
